<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    tools:context=".ui.auth.signup.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/daftar"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_theme_light_outline" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            app:errorEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            app:errorEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:fontFamily="@font/poppins"
            android:text="@string/masuk"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/signup_line_left"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/md_theme_light_outline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/txt_signup_option"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_signup_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/atau_daftar_dengan"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/signup_line_right"
                app:layout_constraintStart_toEndOf="@id/signup_line_left"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/signup_line_right"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/md_theme_light_outline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_signup_option"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_signin_daftar"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:fontFamily="@font/poppins"
            android:text="@string/daftar"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

        <TextView
            android:id="@+id/txt_login_tnc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/auth_t_n_c"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
    </LinearLayout>

</LinearLayout>